Fix overflow tables inside card

--- a/web/Style/styles.css
+++ b/web/Style/styles.css
@@ -430,7 +430,7 @@ tr:nth-child(even) {
 
 .scrollable {
   max-height: 110px;
-  /* overflow-y: auto; */
+  overflow-y: auto; 
   display:block;
   /*border-bottom: 1px solid #ddd;*/
 }
